Uvodjenje klase u scriptPitanja

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
         <button id="posalji">Pošalji odgovore</button>
         <button id="nova">Nova pitanja</button>
     </div>
-    <script src="scriptPitanja.js"></script>
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
 </body>
 </html>
